--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-millisecond (0.1.0-1) UNRELEASED; urgency=medium
+millisecond (0.0.0-1) UNRELEASED; urgency=medium
 
-  * Initial release. (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Automated release of 0.0.0
 
- -- Gahel <music@gahel.fr>  Tue, 13 May 2025 18:57:02 +0200
+ -- Gahel <music@gahel.fr>  Thu, 15 May 2025 04:42:57 +0200
