--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-millisecond (0.0.6-1) UNRELEASED; urgency=medium
+millisecond (0.0.7) UNRELEASED; urgency=medium
 
-  * Automated release of 0.0.6
+  * Automated release of 0.0.7
 
- -- Gahel <music@gahel.fr>  Tue, 20 May 2025 03:34:18 +0200
+ -- Gahel <music@gahel.fr>  Tue, 20 May 2025 05:09:58 +0200
