--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-millisecond (0.1.1) UNRELEASED; urgency=medium
+millisecond (0.1.2) UNRELEASED; urgency=medium
 
   * Automated release of 0.1.1
+  * Automated release of 0.1.2
 
- -- Gahel <music@gahel.fr>  Thu, 22 May 2025 19:56:34 +0200
+ -- Gahel <music@gahel.fr>  Sun, 12 Oct 2025 17:32:32 +0200
