--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-millisecond (0.1.2) UNRELEASED; urgency=medium
+millisecond (0.2.0) UNRELEASED; urgency=medium
 
-  * Automated release of 0.1.1
-  * Automated release of 0.1.2
+ * Upgrade to gnome 49
+ * Remove unnecessary flatpak permissions
 
- -- Gahel <music@gahel.fr>  Sun, 12 Oct 2025 17:32:32 +0200
+ -- Gahel <music@gahel.fr>  Tue, 14 Oct 2025 14:56:42 +0200
